# mir-to-zepter-converter

./: .gitignore  Dockerfile  README.md  fly.toml  package-lock.json  package.json
.github/workflows/: main.yml
backend/: pyproject.toml
backend/src/app/: __main__.py  api.py  rates.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
