[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Alex Kovalenko <merkone@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
beautifulsoup4 = "^4.12.2"
aiohttp-cors = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
